k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres    
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim #Tells Kubernetes that I need some type of longterm storage that meets all requirements that is layed out in this object
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432    
          volumeMounts: #got access to the storage and this is how I want it to be used inside of my container
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres #means that any data inside the container that is stored inside of mountpath, will stored inside a folder called postgres inside the PVC
